--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 server.port=0
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.value}}
 spring.application.name=products-service
+
+spring.datasource.url=jdbc:mysql://localhost/product_db?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+
+#axon.eventhandling.processors.produc-group.mode=subscribing
+axon.eventhandling.processors.produc-group.mode=tracking
+logging.level.org.axonframework.axonserver.connector.event.axon.AxonServerEventStore=debug
